Implemented AddExampleCommand and AddPathItemCommand
