# src/main/resources/specs/openapi/openapi-3.0.yaml
@@ -22,12 +22,22 @@ traits:
     properties:
       - name: '$ref'
         type: string
+  - name: ExamplesParent
+    properties:
+      - name: examples
+        type: '{Example}'
+  - name: ServersParent
+    properties:
+      - name: servers
+        type: '[Server]'
+
 
 entities:
   - name: Document
     root: true
     traits:
       - Extensible
+      - ServersParent
     properties:
       - name: openapi
         type: string
@@ -163,6 +173,7 @@ entities:
     traits:
       - Extensible
       - Referenceable
+      - ServersParent
     properties:
       - name: summary
         type: string
@@ -196,6 +207,7 @@ entities:
   - name: Operation
     traits:
       - Extensible
+      - ServersParent
     properties:
       - name: tags
         type: '[string]'
@@ -241,6 +253,7 @@ entities:
     traits:
       - Extensible
       - Referenceable
+      - ExamplesParent
     properties:
       - name: name
         type: string
@@ -292,6 +305,7 @@ entities:
   - name: MediaType
     traits:
       - Extensible
+      - ExamplesParent
     properties:
       - name: schema
         type: Schema
@@ -411,6 +425,7 @@ entities:
     traits:
       - Extensible
       - Referenceable
+      - ExamplesParent
     properties:
       - name: description
         type: string
